--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,13 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31"
         android:icon="@mipmap/ic_launcher"
+
         >
 
         <activity
             android:name=".presentation.activities.MainActivity"
             android:exported="true"
+            android:screenOrientation="sensorPortrait"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
