--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,13 @@
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 <!--    android:icon="@mipmap/ic_launcher"-->
 <!--    android:roundIcon="@mipmap/ic_launcher_round"-->
     <application
+        android:enableOnBackInvokedCallback="true"
+        android:usesCleartextTraffic="true"
         android:name=".NetflixApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,7 +19,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        tools:targetApi="31"
+        tools:targetApi="tiramisu"
         android:icon="@mipmap/ic_launcher"
 
         >
