--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 <!--    android:icon="@mipmap/ic_launcher"-->
 <!--    android:roundIcon="@mipmap/ic_launcher_round"-->
     <application
+
         android:enableOnBackInvokedCallback="true"
         android:usesCleartextTraffic="true"
         android:name=".NetflixApp"
@@ -21,13 +22,17 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="tiramisu"
         android:icon="@mipmap/ic_launcher"
-
         >
+        <receiver android:name=".presentation.activities.MainActivity$PiPReceiver"/>
 
         <activity
             android:name=".presentation.activities.MainActivity"
             android:exported="true"
             android:screenOrientation="sensorPortrait"
+            android:supportsPictureInPicture = "true"
+            android:configChanges=
+                "screenSize|smallestScreenSize|screenLayout|orientation"
+
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
